<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_psem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/profil_sem"
            android:layout_width="52dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/jadwal_sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/jadwalSem"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profil_sem"
            app:layout_constraintTop_toTopOf="@+id/profil_sem" />

        <TextView
            android:id="@+id/Mnama_sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Mnama"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/jadwal_sem"
            app:layout_constraintTop_toBottomOf="@+id/jadwal_sem" />

        <TextView
            android:id="@+id/nim_sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nim"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/Mnama_sem"
            app:layout_constraintTop_toBottomOf="@+id/Mnama_sem" />

        <Button
            android:id="@+id/Bterima_sem"
            android:layout_width="70dp"
            android:layout_height="31dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/oren"
            android:text="@string/btn_terima"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nim_sem"
            app:layout_constraintTop_toBottomOf="@+id/nim_sem"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/Btolak_sem"
            android:layout_width="70dp"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button"
            android:backgroundTint="#E3A211"
            android:text="@string/btn_tolak"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/Bterima_sem"
            app:layout_constraintStart_toEndOf="@+id/Bterima_sem"
            app:layout_constraintTop_toTopOf="@+id/Bterima_sem"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>