<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_jseminar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/profil_jsem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:layout_width="52dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/jadwal_jsem"
            app:layout_constraintStart_toEndOf="@+id/profil_jsem"
            app:layout_constraintTop_toTopOf="@+id/profil_jsem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/jadwalSem"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Mnama_jsem"
            app:layout_constraintStart_toStartOf="@+id/jadwal_jsem"
            app:layout_constraintTop_toBottomOf="@+id/jadwal_jsem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Mnama"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nim_jsem"
            app:layout_constraintStart_toStartOf="@+id/Mnama_jsem"
            app:layout_constraintTop_toBottomOf="@+id/Mnama_jsem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nim"
            android:textColor="#000000"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/JTA_jsem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="none"
            android:text="@string/isiTA"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/Mnama_jsem"
            app:layout_constraintTop_toBottomOf="@+id/nim_jsem"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>